[package]
name = "stable-diffusion-rs"
version = "0.1.0"
authors = ["Pablo Guerrero <siriux@gmail.com>"]
edition = "2021"

description = "A stable diffusion library in Rust based on the diffusers-rs and tch crates by Laurent Mazare (a port of huggingface diffusers pytorch library)"
repository = "https://github.com/siriux/stable-diffusion-rs"
keywords = ["pytorch", "deep-learning", "machine-learning", "diffusion", "transformers", "stable-diffusion"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

exclude = [
    "media/*",
]

[dependencies]
anyhow = "1"
thiserror = "1"
regex = "1.6.0"
tch = "0.9.0"
diffusers = { path = "../../../External/diffusers-rs", version = "0.1.2" }
